# Task_scheduler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  dockerfile  dockerfile_dev  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: action.yaml  tests.yaml
ci_cd/: docker-compose.yaml
deploy/: .env  docker-compose.yaml  docker-compose_temp.yaml  nginx.conf
develop/: nginx.conf
todolist/bot/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: _chat.py  _states.py  runbot.py
todolist/bot/migrations/: 0001_initial.py  0002_tgchatstate.py
todolist/bot/tg/: client.py  dc.py
todolist/core/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  filters.py  models.py  permissions.py  routers.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_board_alter_category_options_alter_comment_options_and_more.py  0003_create_new_objects.py  0004_alter_boardparticipant_options_and_more.py  0004_alter_category_board.py
todolist/tests/: conftest.py  factories.py  tests.py  utils.py
todolist/tests/core/: conftest.py
todolist/tests/core/views/: test_login.py  test_profile_view.py  test_signup.py  test_update_password.py
todolist/tests/goals/views/: test_board.py  test_board_create.py  test_board_list.py  tests.py
todolist/tests/goals/views/board_viewset/: test_board_create.py  test_board_detail.py  test_board_list.py
todolist/tests/goals/views/category_viewset/: test_category_create.py  test_category_detail.py  test_category_list.py
todolist/tests/goals/views/comment_viewset/: test_comment_create.py  test_comment_detail.py  test_comment_list.py
todolist/tests/goals/views/goal_viewset/: test_goal_create.py  test_goal_detail.py  test_goal_list.py
todolist/todolist/: settings.py  urls.py
